<resources>
    <string name="app_name">PodWave</string>

    <!--Tratativas e Erros-->
    <string name="invalid_url">A URL inserida parece ser inválida por favor tente novamente com uma nova URL</string>
    <string name="empty_url">Você precisa preencher o campo com uma URL</string>
    <string name="empty_rss">A url retornou uma resposta vazia</string>
    <string name="parse_error">Houve um problema ao analisar o podcast</string>
    <string name="parse_null">Houve um problema ao carregar o podcast</string>
    <string name="response_error">Houve um problema na resposta do servidor, tente mais tarde</string>
    <string name="connection_failure">Houve um problema na requisção, verifique sua conexão com a internet</string>

    <!--Strings Main Activity Layout-->
    <string name="clear_history">limpar</string>
    <string name="edit_text_url">Insira a URL RSS</string>
    <string name="text_tittle">Podwave</string>
    <string name="text_init">Vamos começar?</string>
    <string name="text_slogan">Toda conversa merece ser ouvida.</string>
    <string name="text_history">Seus últimos acessos</string>
    <string name="urlButton_layout_text">Carregar Podcast</string>

    <!--Strings Main Activity Class-->
    <string name="dialog_tittle_fetcher">Atenção Podwaver</string>
    <string name="dialog_tittle_cache">Atenção Podwaver</string>
    <string name="dialog_description_chace">Deseja limpar o cache do aplicativo?</string>
    <string name="dialog_button_1_fetcher">fechar</string>
    <string name="dialog_button_1_chace">Sim</string>
    <string name="dialog_button_2_chace">Não</string>
    <string name="invalid_url_text"><u>A url inserida é invalida</u></string>
    <string name="empty_url_text"><u> Preencha o campo da url</u></string>
    <string name="permission_denied"><u>Sem as permissões o podcast não será executado em segundo plano.</u></string>

    <!--Strings Podcast Activity Layout-->
    <string name="podcast_tittle">Título do Podcast</string>
    <string name="podcast_category">Categoria do Podcast</string>
    <string name="podcast_autor">Autor do Podcast</string>
    <string name="podcast_episode_size">Episódios: 0</string>
    <string name="podcast_description">Descrição do Podcast</string>
    <string name="episode_image_description">Imagem do episódio</string>

    <!--Strings Podcast Activity Class-->
    <string name="podcast_category_class">Categoria desconhecida</string>
    <string name="podcast_autor_class">Autor desconhecido</string>

    <!--Strings Main Activity Class-->
    <string name="dialog_button_back">Voltar</string>
    <string name="dialog_description_back">Houve um problema ao carregar o podcast.</string>

    <!--Episode item Layout-->
    <string name="episode_tittle">Título do Episódio</string>
    <string name="episode_date">Data de Publicação</string>

    <!--Episode item -->
    <string name="episode_date_text">Publicado em</string>

    <!--Strings Player Fragment Layout-->

    <!--Strings PlayerService-->
    <string name="channel">audio_playback_channel</string>
    <string name="notification_name">Reprodução de podcast</string>
    <string name="notification_description">Data de Publicação</string>
    <string name="notification_tag">Podcast</string>
</resources>