<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/podcast_image_layout"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="top"
                android:scaleType="centerCrop"
                android:background="@drawable/image_backgorund"
                android:src="@drawable/logtype_podwave" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/podcast_title_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@string/podcast_tittle"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/podcast_category_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:gravity="center"
                    android:text="@string/podcast_category"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/podcast_author_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:gravity="center"
                    android:text="@string/podcast_autor"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/podcast_episode_size_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:gravity="center"
                    android:text="@string/podcast_episode_size"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>


        <TextView
            android:id="@+id/podcast_description_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/podcast_description"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/episodes_recycler_view_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clipToPadding="false"
            android:scrollbars="vertical"
            android:layout_marginTop="6dp"/>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/fragment_container_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

</FrameLayout>
